--- a/styles.scss
+++ b/styles.scss
@@ -47,14 +47,15 @@ a {
 	display: flex;
 	flex-flow: row nowrap;
 	align-items: center;
-	justify-content: space-evenly;
+	justify-content: center;
 	padding-left: 10px;
 	.nav-links > a {
+		display: none;
 		margin-left: 2em;
+		position: relative;
 		&:hover {
 			text-decoration: none;
 		}
-		position: relative;
 		&:before, &:after {
 		    content: '';
 		    background: $light-blue;
@@ -118,6 +119,11 @@ a {
 	> .register {
 		align-self: center;
 	}
+	&.first-banner {
+		flex-flow: column nowrap;
+		justify-content: space-between;
+		align-items: center;
+	}
 }
 // join salt buttons
 .register {
@@ -136,7 +142,7 @@ a {
 // container for join salt button on mobile
 .register-mobile-wrapper {
 	background: rgba(65, 140, 0, 0.91);
-	padding: 20px;
+	padding: 20px 0;
 	width: 100%;
 	display: flex;
 	flex-flow: row nowrap;
@@ -162,6 +168,40 @@ a {
 		padding: 5px;
 	}
 }
+.first-section-content {
+	display: flex;
+}
+.first-section-content {
+	justify-content: flex-end;
+	width: 100%;
+	.icon-block {
+		background: rgba($salt-blue, 0.87);
+		display: flex;
+		flex-flow: row wrap;
+		justify-content: space-around;
+		align-items: center;
+		padding: 0;
+		width: 100%;
+		.icon {
+			display: inline-block;
+			width: 100px;
+			height: 100px;
+			background: white;
+			&:first-of-type {
+				background: url('img/Tools.svg');
+			}
+			&:nth-of-type(2) {
+				background: url('img/Articles.svg');
+			}
+			&:nth-of-type(3) {
+				background: url('img/Video.svg');
+			}
+			&:nth-of-type(4) {
+				background: url('img/Courses.svg');
+			}
+		}
+	}
+}
 // container for the tablet/desktop subtext and join button
 .copy-block {
 	display: none;
@@ -184,6 +224,12 @@ a {
 }
 
 @media only screen and (min-width: 40.063em) {
+	.navigation {
+		justify-content: center;
+		.nav-links > a {
+			display: inline-block;
+		}
+	}
 	// banner section
 	.banner-section {
 		// mobile join salt buttons
@@ -199,6 +245,7 @@ a {
 		margin: 0;
 		z-index: 1;
 		display: block;
+		font-size: 1em;
 	}
 	// banner header container
 	.copy-header {
@@ -212,11 +259,29 @@ a {
 	.filler-section {
 		height: $filler-section-h;
 	}
+	.first-section-content {
+		justify-content: center;
+		.copy-block {
+			width: 40%;
+		}
+		.icon-block {
+			width: 60%;
+		}
+	}
 }
 
 @media only screen and (min-width: 64.063em) {
 	// description text section
 	.copy-block {
 		width: 30%;	
+		font-size: 1.25em;
+	}
+	.first-section-content {
+		.copy-block {
+			width: 25%;
+		}
+		.icon-block {
+			width: 50%;
+		}
 	}
 }
