--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,20 @@
+*, *:before, *:after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
 body {
-  font-family: 'Arial';
-  color: #003765; }
+  font-family: 'Noto Sans';
+  color: #FFFFFF; }
 
 header, main {
   margin: 0 auto; }
 
 a {
-  color: #0070C4;
+  color: #FFFFFF;
   font-weight: bold;
-  text-decoration: none; }
+  text-decoration: underline; }
   a:hover {
-    text-decoration: underline; }
+    text-decoration: none; }
 
 .navigation {
   height: 3.5em;
@@ -35,7 +39,9 @@ a {
   .navigation .nav-links > a {
     display: none;
     margin-left: 2em;
-    position: relative; }
+    position: relative;
+    color: #0070C4;
+    text-decoration: none; }
     .navigation .nav-links > a:hover {
       text-decoration: none; }
     .navigation .nav-links > a:before, .navigation .nav-links > a:after {
@@ -80,26 +86,25 @@ a {
   -webkit-align-items: flex-end;
   -ms-flex-align: end;
   align-items: flex-end;
-  min-height: 740px;
+  min-height: calc(100vh - 50px);
   padding: 0;
   background-size: cover;
   background-repeat: no-repeat;
-  position: relative;
-  color: #FFFFFF; }
+  position: relative; }
   .banner-section:nth-of-type(1) {
     background-image: url("img/study.jpg"); }
   .banner-section:nth-of-type(2) {
-    background-image: url("img/school.jpg"); }
+    background-image: url("img/school2.jpg"); }
   .banner-section:nth-of-type(3) {
-    background-image: url("img/room.jpg"); }
+    background-image: url("img/desk.jpg"); }
   .banner-section:nth-of-type(4) {
     background-image: url("img/outside.jpg"); }
   .banner-section:nth-of-type(5) {
-    background-image: url("img/library.jpg"); }
+    background-image: url("img/library2.jpg"); }
   .banner-section:nth-of-type(6) {
-    background-image: url("img/class.jpg"); }
+    background-image: url("img/graduation2.jpg"); }
   .banner-section:nth-of-type(7) {
-    background-image: url("img/group-outdoor.jpg"); }
+    background-image: url("img/study2.jpg"); }
   .banner-section > .register {
     -webkit-align-self: center;
     -ms-flex-item-align: center;
@@ -125,7 +130,8 @@ a {
   color: #003765;
   border-radius: 30px;
   border: 2px solid #FFFFFF;
-  display: inline-block; }
+  display: inline-block;
+  text-decoration: none; }
   .register:hover {
     text-decoration: none;
     background: transparent;
@@ -150,6 +156,19 @@ a {
   justify-content: center;
   margin-bottom: 7em; }
 
+.secondary-cta {
+  background: transparent;
+  color: #FFFFFF;
+  padding: 0.6em 1.1em;
+  border-radius: 30px;
+  border: 2px solid #FFFFFF;
+  display: inline-block;
+  text-decoration: none; }
+  .secondary-cta:hover {
+    text-decoration: none;
+    background: rgba(248, 248, 248, 0.1);
+    color: #FFFFFF; }
+
 .section-filter {
   position: absolute;
   top: 0;
@@ -158,15 +177,17 @@ a {
   height: 100%;
   background: rgba(255, 255, 255, 0.1); }
 
+.copy-header, .first-section-content, .copy-block {
+  z-index: 1; }
+
 .copy-header {
   -webkit-align-self: flex-start;
   -ms-flex-item-align: start;
   align-self: flex-start;
-  font-size: 2.5em;
-  color: #FFFFFF; }
+  font-size: 2.5em; }
   .copy-header h2 {
-    background: rgba(0, 55, 101, 0.87);
-    padding: 5px; }
+    background: rgba(13, 65, 109, 0.87);
+    padding: 5px 10px 10px 10px; }
 
 .first-section-content {
   display: -webkit-box;
@@ -175,11 +196,18 @@ a {
   display: flex; }
 
 .first-section-content {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+  -webkit-flex-flow: column-reverse nowrap;
+  -ms-flex-flow: column-reverse nowrap;
+  flex-flow: column-reverse nowrap;
   -webkit-box-pack: end;
   -webkit-justify-content: flex-end;
   -ms-flex-pack: end;
   justify-content: flex-end;
   width: 100%; }
+  .first-section-content .register-mobile-wrapper {
+    margin: 0; }
   .first-section-content .icon-block {
     background: rgba(0, 55, 101, 0.87);
     display: -webkit-box;
@@ -188,9 +216,9 @@ a {
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-    -webkit-flex-flow: row wrap;
-    -ms-flex-flow: row wrap;
-    flex-flow: row wrap;
+    -webkit-flex-flow: row nowrap;
+    -ms-flex-flow: row nowrap;
+    flex-flow: row nowrap;
     -webkit-justify-content: space-around;
     -ms-flex-pack: distribute;
     justify-content: space-around;
@@ -202,17 +230,41 @@ a {
     width: 100%; }
     .first-section-content .icon-block .icon {
       display: inline-block;
-      width: 100px;
-      height: 100px;
-      background: white; }
-      .first-section-content .icon-block .icon:first-of-type {
-        background: url("img/Tools.svg"); }
-      .first-section-content .icon-block .icon:nth-of-type(2) {
-        background: url("img/Articles.svg"); }
-      .first-section-content .icon-block .icon:nth-of-type(3) {
-        background: url("img/Video.svg"); }
-      .first-section-content .icon-block .icon:nth-of-type(4) {
-        background: url("img/Courses.svg"); }
+      width: 55px;
+      height: 130px;
+      background-repeat: no-repeat;
+      background-position: center;
+      position: relative;
+      bottom: 15px; }
+      .first-section-content .icon-block .icon:after {
+        content: '';
+        font-style: normal;
+        text-align: center;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        font-weight: bold; }
+      .first-section-content .icon-block .icon.tool-icon {
+        background-image: url("img/Tools.svg"); }
+        .first-section-content .icon-block .icon.tool-icon:after {
+          content: 'Tools'; }
+      .first-section-content .icon-block .icon.article-icon {
+        background-image: url("img/Articles.svg"); }
+        .first-section-content .icon-block .icon.article-icon:after {
+          content: 'Articles'; }
+      .first-section-content .icon-block .icon.video-icon {
+        background-image: url("img/Video.svg"); }
+        .first-section-content .icon-block .icon.video-icon:after {
+          content: 'Videos'; }
+      .first-section-content .icon-block .icon.course-icon {
+        background-image: url("img/Courses.svg"); }
+        .first-section-content .icon-block .icon.course-icon:after {
+          content: 'Courses'; }
+      .first-section-content .icon-block .icon.more-icon {
+        background-image: url("img/more.svg"); }
+        .first-section-content .icon-block .icon.more-icon:after {
+          content: '& more'; }
 
 .copy-block {
   display: none; }
@@ -246,10 +298,9 @@ a {
     display: none; }
   .copy-block {
     background: rgba(65, 140, 0, 0.91);
-    padding: 0 1em 2em 1em;
+    padding: 0 1em 1.25em 1em;
     width: 60%;
     margin: 0;
-    z-index: 1;
     display: block;
     font-size: 1em; }
   .copy-header {
@@ -259,20 +310,48 @@ a {
   .filler-section {
     height: 7em; }
   .first-section-content {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: row nowrap;
+    -ms-flex-flow: row nowrap;
+    flex-flow: row nowrap;
     -webkit-box-pack: center;
     -webkit-justify-content: center;
     -ms-flex-pack: center;
     justify-content: center; }
     .first-section-content .copy-block {
-      width: 40%; }
+      width: 40%;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -webkit-flex-flow: row wrap;
+      -ms-flex-flow: row wrap;
+      flex-flow: row wrap;
+      -webkit-justify-content: space-around;
+      -ms-flex-pack: distribute;
+      justify-content: space-around;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      align-items: center; }
     .first-section-content .icon-block {
-      width: 60%; } }
+      width: 60%; }
+      .first-section-content .icon-block .icon {
+        width: 100px;
+        height: 100px; }
+        .first-section-content .icon-block .icon:after {
+          bottom: -1.5em; } }
 
 @media only screen and (min-width: 64.063em) {
   .copy-block {
     width: 30%;
     font-size: 1.25em; }
+  .first-banner h2 {
+    margin-left: 2em; }
   .first-section-content .copy-block {
-    width: 25%; }
+    width: 27%; }
   .first-section-content .icon-block {
     width: 50%; } }
