--- a/styles.css
+++ b/styles.css
@@ -74,72 +74,42 @@ a {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -webkit-flex-flow: row wrap;
-  -ms-flex-flow: row wrap;
-  flex-flow: row wrap;
-  -webkit-justify-content: space-around;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
-  -webkit-box-align: end;
-  -webkit-align-items: flex-end;
-  -ms-flex-align: end;
-  align-items: flex-end;
-  min-height: calc(100vh - 50px);
+  -webkit-flex-flow: column nowrap;
+  -ms-flex-flow: column nowrap;
+  flex-flow: column nowrap;
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
   padding: 0;
   background-size: cover;
   background-repeat: no-repeat;
   position: relative; }
-  .banner-section:nth-of-type(1) {
-    background-image: url("img/study.jpg"); }
-  .banner-section:nth-of-type(2) {
-    background-image: url("img/school2.jpg"); }
-  .banner-section:nth-of-type(3) {
-    background-image: url("img/desk.jpg"); }
-  .banner-section:nth-of-type(4) {
-    background-image: url("img/outside.jpg"); }
-  .banner-section:nth-of-type(5) {
-    background-image: url("img/library2.jpg"); }
-  .banner-section:nth-of-type(6) {
-    background-image: url("img/graduation2.jpg"); }
-  .banner-section:nth-of-type(7) {
-    background-image: url("img/study2.jpg"); }
-  .banner-section > .register {
-    -webkit-align-self: center;
-    -ms-flex-item-align: center;
-    align-self: center; }
-  .banner-section.first-banner {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-flow: column nowrap;
-    -ms-flex-flow: column nowrap;
-    flex-flow: column nowrap;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center; }
+  .banner-section > img {
+    width: 100%; }
 
 .register {
   padding: 0.6em 1.1em;
+  display: inline-block;
+  white-space: nowrap;
+  line-height: 1.15;
+  text-decoration: none;
   background: #FFFFFF;
   color: #003765;
   border-radius: 30px;
-  border: 2px solid #FFFFFF;
-  display: inline-block;
-  text-decoration: none; }
-  .register:hover {
+  border-width: 2px;
+  border-style: solid;
+  border-color: #FFFFFF; }
+  .register:hover, .register:focus, .register:active {
     text-decoration: none;
-    background: transparent;
-    color: #FFFFFF; }
+    color: #FFFFFF;
+    background: transparent; }
 
 .register-mobile-wrapper {
   background: rgba(65, 140, 0, 0.91);
-  padding: 20px 0;
+  padding: 10px 0;
   width: 100%;
   display: -webkit-box;
   display: -webkit-flex;
@@ -150,24 +120,25 @@ a {
   -webkit-flex-flow: row nowrap;
   -ms-flex-flow: row nowrap;
   flex-flow: row nowrap;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  margin-bottom: 7em; }
+  -webkit-justify-content: space-around;
+  -ms-flex-pack: distribute;
+  justify-content: space-around; }
 
 .secondary-cta {
+  padding: 0.6em 1.1em;
+  display: inline-block;
+  white-space: nowrap;
+  line-height: 1.15;
+  text-decoration: none;
   background: transparent;
   color: #FFFFFF;
-  padding: 0.6em 1.1em;
   border-radius: 30px;
-  border: 2px solid #FFFFFF;
-  display: inline-block;
-  text-decoration: none; }
-  .secondary-cta:hover {
+  border-width: 2px;
+  border-style: solid;
+  border-color: #FFFFFF; }
+  .secondary-cta:hover, .secondary-cta:focus, .secondary-cta:active {
     text-decoration: none;
-    background: rgba(248, 248, 248, 0.1);
-    color: #FFFFFF; }
+    background: rgba(248, 248, 248, 0.1); }
 
 .section-filter {
   position: absolute;
@@ -177,25 +148,26 @@ a {
   height: 100%;
   background: rgba(255, 255, 255, 0.1); }
 
-.copy-header, .first-section-content, .copy-block {
+.copy-header, .first-section-content, .copy-block, .register-mobile-wrapper {
   z-index: 1; }
 
 .copy-header {
   -webkit-align-self: flex-start;
   -ms-flex-item-align: start;
   align-self: flex-start;
-  font-size: 2.5em; }
+  font-size: 2.5em;
+  width: 100%;
+  text-align: center;
+  background: url("img/pattern_blue.jpg"); }
   .copy-header h2 {
-    background: rgba(13, 65, 109, 0.87);
-    padding: 5px 10px 10px 10px; }
+    padding: 5px 10px 10px 10px;
+    margin: 0; }
 
 .first-section-content {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
-  display: flex; }
-
-.first-section-content {
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: reverse;
   -webkit-flex-flow: column-reverse nowrap;
@@ -208,69 +180,70 @@ a {
   width: 100%; }
   .first-section-content .register-mobile-wrapper {
     margin: 0; }
-  .first-section-content .icon-block {
-    background: rgba(0, 55, 101, 0.87);
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-flow: row nowrap;
-    -ms-flex-flow: row nowrap;
-    flex-flow: row nowrap;
-    -webkit-justify-content: space-around;
-    -ms-flex-pack: distribute;
-    justify-content: space-around;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-    padding: 0;
-    width: 100%; }
-    .first-section-content .icon-block .icon {
-      display: inline-block;
-      width: 55px;
-      height: 130px;
-      background-repeat: no-repeat;
-      background-position: center;
-      position: relative;
-      bottom: 15px; }
-      .first-section-content .icon-block .icon:after {
-        content: '';
-        font-style: normal;
-        text-align: center;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        font-weight: bold; }
-      .first-section-content .icon-block .icon.tool-icon {
-        background-image: url("img/Tools.svg"); }
-        .first-section-content .icon-block .icon.tool-icon:after {
-          content: 'Tools'; }
-      .first-section-content .icon-block .icon.article-icon {
-        background-image: url("img/Articles.svg"); }
-        .first-section-content .icon-block .icon.article-icon:after {
-          content: 'Articles'; }
-      .first-section-content .icon-block .icon.video-icon {
-        background-image: url("img/Video.svg"); }
-        .first-section-content .icon-block .icon.video-icon:after {
-          content: 'Videos'; }
-      .first-section-content .icon-block .icon.course-icon {
-        background-image: url("img/Courses.svg"); }
-        .first-section-content .icon-block .icon.course-icon:after {
-          content: 'Courses'; }
-      .first-section-content .icon-block .icon.more-icon {
-        background-image: url("img/more.svg"); }
-        .first-section-content .icon-block .icon.more-icon:after {
-          content: '& more'; }
+
+.icon-block {
+  background: url("img/pattern_blue.jpg");
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-flow: row nowrap;
+  -ms-flex-flow: row nowrap;
+  flex-flow: row nowrap;
+  -webkit-justify-content: space-around;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 0 0 10px 0;
+  width: 100%; }
+  .icon-block .icon {
+    display: inline-block;
+    width: 55px;
+    height: 130px;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: relative;
+    bottom: 15px; }
+    .icon-block .icon:after {
+      content: '';
+      font-style: normal;
+      text-align: center;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      font-weight: bold; }
+    .icon-block .icon.tool-icon {
+      background-image: url("img/Tools.svg"); }
+      .icon-block .icon.tool-icon:after {
+        content: 'Tools'; }
+    .icon-block .icon.article-icon {
+      background-image: url("img/Articles.svg"); }
+      .icon-block .icon.article-icon:after {
+        content: 'Articles'; }
+    .icon-block .icon.video-icon {
+      background-image: url("img/Video.svg"); }
+      .icon-block .icon.video-icon:after {
+        content: 'Videos'; }
+    .icon-block .icon.course-icon {
+      background-image: url("img/Courses.svg"); }
+      .icon-block .icon.course-icon:after {
+        content: 'Courses'; }
+    .icon-block .icon.more-icon {
+      background-image: url("img/more.svg"); }
+      .icon-block .icon.more-icon:after {
+        content: '& more'; }
 
 .copy-block {
   display: none; }
 
 .filler-section {
-  height: 3em;
+  height: 0;
   width: 100%;
   position: relative;
   background: url("img/pattern_blue.jpg"); }
@@ -294,8 +267,36 @@ a {
     justify-content: center; }
     .navigation .nav-links > a {
       display: inline-block; }
-  .banner-section > .register {
-    display: none; }
+  .banner-section {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: row wrap;
+    -ms-flex-flow: row wrap;
+    flex-flow: row wrap;
+    -webkit-justify-content: space-around;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+    -webkit-box-align: end;
+    -webkit-align-items: flex-end;
+    -ms-flex-align: end;
+    align-items: flex-end;
+    min-height: calc(100vh - 50px); }
+    .banner-section:nth-of-type(1) {
+      background-image: url("img/study.jpg"); }
+    .banner-section:nth-of-type(2) {
+      background-image: url("img/school2.jpg"); }
+    .banner-section:nth-of-type(3) {
+      background-image: url("img/room.jpg"); }
+    .banner-section:nth-of-type(4) {
+      background-image: url("img/outside.jpg"); }
+    .banner-section:nth-of-type(5) {
+      background-image: url("img/library2.jpg"); }
+    .banner-section:nth-of-type(6) {
+      background-image: url("img/graduation2.jpg"); }
+    .banner-section:nth-of-type(7) {
+      background-image: url("img/study2.jpg"); }
+    .banner-section > .register, .banner-section img {
+      display: none; }
   .copy-block {
     background: rgba(65, 140, 0, 0.91);
     padding: 0 1em 1.25em 1em;
@@ -304,11 +305,17 @@ a {
     display: block;
     font-size: 1em; }
   .copy-header {
-    font-size: 3em; }
+    font-size: 3em;
+    background: none;
+    text-align: left;
+    width: auto; }
+    .copy-header > h2 {
+      background: rgba(13, 65, 109, 0.87);
+      margin: 0.8em 0; }
   .register-mobile-wrapper {
     display: none; }
   .filler-section {
-    height: 7em; }
+    height: 3em; }
   .first-section-content {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -330,28 +337,41 @@ a {
       -webkit-flex-flow: row wrap;
       -ms-flex-flow: row wrap;
       flex-flow: row wrap;
-      -webkit-justify-content: space-around;
-      -ms-flex-pack: distribute;
-      justify-content: space-around;
+      -webkit-box-pack: justify;
+      -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+      justify-content: space-between;
       -webkit-box-align: center;
       -webkit-align-items: center;
       -ms-flex-align: center;
       align-items: center; }
-    .first-section-content .icon-block {
-      width: 60%; }
-      .first-section-content .icon-block .icon {
-        width: 100px;
-        height: 100px; }
-        .first-section-content .icon-block .icon:after {
-          bottom: -1.5em; } }
+  .icon-block {
+    width: 60%;
+    background: rgba(0, 55, 101, 0.87);
+    padding: 1.5em 0; }
+    .icon-block .icon {
+      width: 100px;
+      height: 100px; }
+      .icon-block .icon:after {
+        bottom: -1.5em; } }
 
 @media only screen and (min-width: 64.063em) {
   .copy-block {
-    width: 30%;
-    font-size: 1.25em; }
-  .first-banner h2 {
-    margin-left: 2em; }
-  .first-section-content .copy-block {
     width: 27%; }
-  .first-section-content .icon-block {
+  .copy-block, .icon-block {
+    font-size: 1.25em; }
+  .first-banner {
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start; }
+    .first-banner .copy-header {
+      padding-left: 2em; }
+  .first-section-content .copy-block {
+    width: 34%; }
+  .icon-block {
     width: 50%; } }
+
+@media only screen and (min-width: 80.625em) {
+  .first-section-content .copy-block {
+    width: 27%; } }
