--- a/styles.scss
+++ b/styles.scss
@@ -23,8 +23,13 @@
  $gray10        : mix($gray15 , $white, 40%); // currently #f1f1f2
  $gray5         : #f8f8f8;
 
-$filler-section-h-mobile: 3em;
-$filler-section-h: 7em;
+$green-alpha: rgba(65, 140, 0, 0.91);
+$blue-white: mix($salt-blue, $white, 95%);
+$blue-white-alpha: rgba($blue-white, 0.87);
+$blue-alpha: rgba($salt-blue, 0.87);
+
+$filler-section-h-mobile: 0;
+$filler-section-h: 3em;
 $filler-section-color: url('img/pattern_blue.jpg');
 
 *, *:before, *:after {
@@ -92,82 +97,52 @@ a {
 .banner-section {
 	width: 100%;
 	display: flex;
-	flex-flow: row wrap;
-	justify-content: space-around;
-	align-items: flex-end;
-	min-height: calc(100vh - 50px);
+	flex-flow: column nowrap;
+	justify-content: flex-end;
 	padding: 0;
 	background-size: cover;
 	background-repeat: no-repeat;		
 	position: relative;
-	&:nth-of-type(1) {
-		background-image: url('img/study.jpg');
-	}
-	&:nth-of-type(2) {
-		background-image: url('img/school2.jpg');
-	}
-	&:nth-of-type(3) {
-		background-image: url('img/desk.jpg');
-	}
-	&:nth-of-type(4) {
-		background-image: url('img/outside.jpg');
-	}
-	&:nth-of-type(5) {
-		background-image: url('img/library2.jpg');
-	}
-	&:nth-of-type(6) {
-		background-image: url('img/graduation2.jpg');
-	}
-	&:nth-of-type(7) {
-		background-image: url('img/study2.jpg');
-	}
-	> .register {
-		align-self: center;
-	}
-	&.first-banner {
-		flex-flow: column nowrap;
-		justify-content: space-between;
-		align-items: center;
+	> img {
+		width: 100%;
 	}
 }
-// join salt buttons
-.register {
+// button mixin
+@mixin home-cta($bg, $color, $border-color, $active-color: false, $active-bg: false, $active-border-color: false) {
 	padding: 0.6em 1.1em;
-	background: $white;
-	color: $salt-blue;
-	border-radius: 30px;
-	border: 2px solid $white;
 	display: inline-block;
+	white-space: nowrap;
+	line-height: 1.15;
 	text-decoration: none;
-	&:hover {
+	background: $bg;
+	color: $color;
+	border-radius: 30px;
+	border-width: 2px;
+	border-style: solid;
+	@if $border-color { border-color: $border-color; }
+	@else { border-color: $bg; }
+	&:hover, &:focus, &:active {
 		text-decoration: none;
-		background: transparent;
-		color: $white;
+		@if $active-border-color { border-color: $active-border-color; }
+		@if $active-color { color: $active-color; }
+		@if $active-bg { background: $active-bg; }
 	}
+}
+// join salt cta
+.register {
+	@include home-cta($bg: $white, $color: $salt-blue, $border-color: $white, $active-bg: transparent, $active-color: $white);
 }
 // container for join salt button on mobile
 .register-mobile-wrapper {
-	background: rgba(65, 140, 0, 0.91);
-	padding: 20px 0;
+	background: $green-alpha;
+	padding: 10px 0;
 	width: 100%;
 	display: flex;
 	flex-flow: row nowrap;
-	justify-content: center;
-	margin-bottom: 7em;
+	justify-content: space-around;;
 }
 .secondary-cta {
-	background: transparent;
-	color: $white;
-	padding: 0.6em 1.1em;
-	border-radius: 30px;
-	border: 2px solid $white;
-	display: inline-block;
-	text-decoration: none;
-	&:hover {
-		text-decoration: none;
-		background: rgba($gray5, 0.1);
-		color: $white;
-	}
+	@include home-cta($bg: transparent, $color: $white, $border-color: $white, $active-bg: rgba($gray5, 0.1));
 }
 // covers sections with a very light transparent layer
 .section-filter {
@@ -178,83 +153,84 @@ a {
     height: 100%;
     background: rgba(255,255,255,0.1);
 }
-.copy-header, .first-section-content, .copy-block {
+.copy-header, .first-section-content, .copy-block, .register-mobile-wrapper {
 	z-index: 1;
 }
 // container for banner headers
 .copy-header {
 	align-self: flex-start;
 	font-size: 2.5em;
+	width: 100%;
+	text-align: center;
+	background: $filler-section-color;
 	h2 {
-		background: rgba(mix($salt-blue, $white, 95%), 0.87);
 		padding: 5px 10px 10px 10px;
+		margin: 0;
 	}
 }
 .first-section-content {
 	display: flex;
-}
-.first-section-content {
 	flex-flow: column-reverse nowrap;
 	justify-content: flex-end;
 	width: 100%;
 	.register-mobile-wrapper {
 		margin: 0;
 	}
-	.icon-block {
-		background: rgba($salt-blue, 0.87);
-		display: flex;
-		flex-flow: row nowrap;
-		justify-content: space-around;
-		align-items: center;
-		padding: 0;
-		width: 100%;
-		.icon {
-			display: inline-block;
-			width: 55px;
-			height: 130px;
-			background-repeat: no-repeat;
-			background-position: center;
-			position: relative;
-			bottom: 15px;
+}
+.icon-block {
+	background: $filler-section-color;
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: space-around;
+	align-items: center;
+	padding: 0 0 10px 0;
+	width: 100%;
+	.icon {
+		display: inline-block;
+		width: 55px;
+		height: 130px;
+		background-repeat: no-repeat;
+		background-position: center;
+		position: relative;
+		bottom: 15px;
+		&:after {
+			content: '';
+			font-style: normal;
+			text-align: center;
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			width: 100%;
+			font-weight: bold;
+		}
+		&.tool-icon {
+			background-image: url('img/Tools.svg');
 			&:after {
-				content: '';
-				font-style: normal;
-				text-align: center;
-				position: absolute;
-				bottom: 0;
-				left: 0;
-				width: 100%;
-				font-weight: bold;
+				content: 'Tools';
 			}
-			&.tool-icon {
-				background-image: url('img/Tools.svg');
-				&:after {
-					content: 'Tools';
-				}
+		}
+		&.article-icon {
+			background-image: url('img/Articles.svg');
+			&:after {
+				content: 'Articles';
 			}
-			&.article-icon {
-				background-image: url('img/Articles.svg');
-				&:after {
-					content: 'Articles';
-				}
+		}
+		&.video-icon {
+			background-image: url('img/Video.svg');
+			&:after {
+				content: 'Videos';
 			}
-			&.video-icon {
-				background-image: url('img/Video.svg');
-				&:after {
-					content: 'Videos';
-				}
+		}
+		&.course-icon {
+			background-image: url('img/Courses.svg');
+			&:after {
+				content: 'Courses';
 			}
-			&.course-icon {
-				background-image: url('img/Courses.svg');
-				&:after {
-					content: 'Courses';
-				}
-			}
-			&.more-icon {
-				background-image: url('img/more.svg');
-				&:after {
-					content: '& more';
-				}
+		}
+		&.more-icon {
+			background-image: url('img/more.svg');
+			&:after {
+				content: '& more';
 			}
 		}
 	}
@@ -289,14 +265,39 @@ a {
 	}
 	// banner section
 	.banner-section {
+		flex-flow: row wrap;
+		justify-content: space-around;
+		align-items: flex-end;
+		min-height: calc(100vh - 50px);
+		&:nth-of-type(1) {
+			background-image: url('img/study.jpg');
+		}
+		&:nth-of-type(2) {
+			background-image: url('img/school2.jpg');
+		}
+		&:nth-of-type(3) {
+			background-image: url('img/room.jpg');
+		}
+		&:nth-of-type(4) {
+			background-image: url('img/outside.jpg');
+		}
+		&:nth-of-type(5) {
+			background-image: url('img/library2.jpg');
+		}
+		&:nth-of-type(6) {
+			background-image: url('img/graduation2.jpg');
+		}
+		&:nth-of-type(7) {
+			background-image: url('img/study2.jpg');
+		}
 		// mobile join salt buttons
-		> .register {
+		> .register, img {
 			display: none;
 		}
 	}
 	// description text container
 	.copy-block {
-		background: rgba(65, 140, 0, 0.91);
+		background: $green-alpha;
 		padding: 0 1em 1.25em 1em;
 		width: 60%;
 		margin: 0;
@@ -306,6 +307,13 @@ a {
 	// banner header container
 	.copy-header {
 		font-size: 3em;
+		background: none;
+		text-align: left;
+		width: auto;
+		> h2 {
+			background: $blue-white-alpha;
+			margin: 0.8em 0;
+		}
 	}
 	// mobile join salt buttons
 	.register-mobile-wrapper {
@@ -322,39 +330,51 @@ a {
 			width: 40%;
 		    display: flex;
             flex-flow: row wrap;
-            justify-content: space-around;
+            justify-content: space-between;
             align-items: center;
 		}
-		.icon-block {
-			width: 60%;
-			.icon {
-                width: 100px;
-                height: 100px;
-                &:after {
-                	bottom: -1.5em;
-                }
+	}
+	.icon-block {
+		width: 60%;
+		background: $blue-alpha;
+		padding: 1.5em 0;
+		.icon {
+            width: 100px;
+            height: 100px;
+            &:after {
+            	bottom: -1.5em;
             }
-		}
+        }
 	}
 }
 
 @media only screen and (min-width: 64.063em) {
 	// description text section
 	.copy-block {
-		width: 30%;	
+		width: 27%;	
+	}
+	.copy-block, .icon-block {
 		font-size: 1.25em;
 	}
 	.first-banner {
-        h2 {
-            margin-left: 2em;
+		justify-content: flex-start;
+        .copy-header {
+            padding-left: 2em;
         }
     }
 	.first-section-content {
 		.copy-block {
-			width: 27%;
+			width: 34%;
 		}
-		.icon-block {
-			width: 50%;
-		}
+	}
+	.icon-block {
+		width: 50%;
+	}
+}
+
+@media only screen and (min-width: 80.625em) {
+	// description text section
+	.first-section-content .copy-block {
+		width: 27%;	
 	}
 }
